--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Programming tech</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
-        <!-- Main Stylsheet  -->
+        <!-- My CSS file -->
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -50,32 +49,6 @@
               </nav>
               <!-- Navbar section End  -->
               <!-- Banner Section start  -->
-              <!-- <section class="container">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="banner-content">
-                            
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-              </section> -->
               <section class="container mb-5">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-inner">
@@ -104,7 +77,7 @@
                         <div class="carousel-caption d-none d-sm-block h-100 d-sm-flex align-items-center">
                             <div class="w-75 m-auto">
                                 <h2 class="fs-1 fw-semibold">Get Started Digital Learning</h2>
-                                <p >It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                                 <button type="button" class="btn btn-primary fs-6 fw-semibold">Get Started</button>
                             </div>
                         </div>
@@ -123,14 +96,19 @@
               <!-- Banner Section End  -->
         </header>
         <!-- Header Section End -->
-        <!-- Our Courses Section Start -->
-        <section class="container">
+        <main>
+                    <!-- Our Courses Section Start -->
+        <section class="container mb-5">
+            <div class="w-50 px-3 my-2 m-auto text-center">
+                <h2 class="fs-1 fw-bold">Discover Our Popular Courses</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
             <div class="container overflow-hidden">
-                <div class="row g-2">
+                <div class="row mb-3 g-3">
                     <div class="courses_content_wrap col-md-12 col-lg-6">
                         <div class="border rounded d-md-flex flex-sm-column flex-md-row">
                             <div class="courses_img p-0">
-                                <img class="w-100" src="images/course/course-1.png" alt="">
+                                <img class="w-100 h-100" src="images/course/course-1.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
                                 <h5>Fundamental Of UI/UX Design</h5>
@@ -142,7 +120,7 @@
                     <div class="courses_content_wrap col-lg-6 col-md-12">
                         <div class="border rounded d-md-flex flex-sm-column flex-md-row">
                             <div class="courses_img p-0">
-                                <img class="w-100" src="images/course/course-2.png" alt="">
+                                <img class="w-100 h-100" src="images/course/course-2.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
                                 <h5 class="">Javascript Basic to advanced</h5>
@@ -154,7 +132,7 @@
                     <div class="courses_content_wrap col-lg-6 col-md-12">
                         <div class="border rounded d-md-flex flex-sm-column flex-md-row">
                             <div class="courses_img p-0">
-                                <img class="w-100" src="images/course/course-3.png" alt="">
+                                <img class="w-100 h-100" src="images/course/course-3.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
                                 <h5 class="">Fullstack Web Development</h5>
@@ -166,7 +144,7 @@
                     <div class="courses_content_wrap col-lg-6 col-md-12">
                         <div class="border rounded d-md-flex flex-sm-column flex-md-row">
                             <div class="courses_img p-0">
-                                <img class="w-100" src="images/course/course-4.png" alt="">
+                                <img class="w-100 h-100" src="images/course/course-4.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
                                 <h5 class="">Digital Marketing</h5>
@@ -178,7 +156,7 @@
                     <div class="courses_content_wrap col-lg-6 col-md-12">
                         <div class="border rounded d-md-flex flex-sm-column flex-md-row">
                             <div class="courses_img p-0">
-                                <img class="w-100" src="images/course/course-5.png" alt="">
+                                <img class="w-100 h-100" src="images/course/course-5.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
                                 <h5 class="">Photography Basic Rules</h5>
@@ -190,7 +168,7 @@
                     <div class="courses_content_wrap col-lg-6 col-md-12 ">
                         <div class="border rounded d-md-flex flex-sm-column flex-md-row">
                             <div class="courses_img p-0">
-                                <img class="w-100" src="images/course/course-6.png" alt="">
+                                <img class="w-100 h-100" src="images/course/course-6.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
                                 <h5 class="">Motion Graphics</h5>
@@ -200,9 +178,45 @@
                         </div>
                       </div>
                 </div>
+                <div class="text-center">
+                    <button type="button" class="btn btn-primary fs-6 fw-semibold">See More Courses</button>
+                </div>
             </div>
         </section>
         <!-- Our Courses End -->
+        <!-- Ready To Join Section Start  -->
+        <section class="container bg-primary text-center text-lg-start d-lg-flex align-items-center p-5">
+            <div class="col-lg-8">
+                <h3 class="text-white">Ready to join </h3>
+                <p class="text-light">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="col-lg-4 text-lg-end">
+                <button type="button" class="btn bg-white text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Stay connent with us</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                         <input class="d-block w-100 mb-2 border-0" type="email" name="" id="" placeholder="Type your mail">
+                         <hr>
+                         <input class="d-block w-100 mb-2 border-0" type="password" name="" id="" placeholder="Type your password">
+                         <hr>
+                         <button  type="submit" class="btn btn-primary d-block w-100 mb-2">Sign Up</button>
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary d-block w-100 mb-2" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Ready To Join Section End -->
+        </main>
 
 
         <!-- bootstrap js file  -->
