--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
               <!-- Banner Section End  -->
         </header>
         <!-- Header Section End -->
+        <!-- Main Section Start  -->
         <main>
                     <!-- Our Courses Section Start -->
         <section class="container mb-5">
@@ -185,7 +186,7 @@
         </section>
         <!-- Our Courses End -->
         <!-- Ready To Join Section Start  -->
-        <section class="container bg-primary text-center text-lg-start d-lg-flex align-items-center p-5">
+        <section class="container bg-primary text-center text-lg-start d-lg-flex align-items-center mb-5 p-5">
             <div class="col-lg-8">
                 <h3 class="text-white">Ready to join </h3>
                 <p class="text-light">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -216,8 +217,66 @@
             </div>
         </section>
         <!-- Ready To Join Section End -->
+        <!-- Frequently Ask Question Section Start  -->
+        <section class="container mb-5">
+            <div class="w-75 px-3 my-2 m-auto text-center">
+                <h2 class="fs-1 fw-bold">Frequently Asked Questions</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="accordion accordion-flush w-75 m-auto" id="accordionFlushExample">
+                <div class="accordion-item border my-2">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    What are the differences between flex and grid?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body"><p>
+                        The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was designed for layout in one dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and columns at the same time.
+                    </p></div>
+                  </div>
+                </div>
+                <div class="accordion-item border my-3">
+                  <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        What are the differences between bootstrap and tailwind?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        <p>The significant difference between Tailwind CSS and Bootstrap is that Tailwind offers predesigned widgets to build a site from scratch with fast UI development, while Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item border my-3">
+                  <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        What is the CSS box model?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        <p>The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item border my-3">
+                  <h2 class="accordion-header" id="flush-headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                        What is the semantic tag?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        <p>The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML more comprehensible by better defining the different sections and layout of web pages.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!-- Frequently Ask Question Section End -->
         </main>
-
+        <!-- Main Section End  -->
 
         <!-- bootstrap js file  -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
