Trasted Section added

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <main>
                     <!-- Our Courses Section Start -->
         <section class="container mb-5">
-            <div class="w-50 px-3 my-2 m-auto text-center">
+            <div class="w-100 px-3 my-2 m-auto text-center">
                 <h2 class="fs-1 fw-bold">Discover Our Popular Courses</h2>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             </div>
@@ -219,7 +219,7 @@
         <!-- Ready To Join Section End -->
         <!-- Frequently Ask Question Section Start  -->
         <section class="container mb-5">
-            <div class="w-75 px-3 my-2 m-auto text-center">
+            <div class="w-100 px-3 my-2 m-auto text-center">
                 <h2 class="fs-1 fw-bold">Frequently Asked Questions</h2>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             </div>
@@ -275,6 +275,33 @@
               </div>
         </section>
         <!-- Frequently Ask Question Section End -->
+        <!-- Trusted Section Start -->
+        <section class="container mb-5 d-none d-lg-block">
+            <div class="w-100 px-3 my-2 m-auto mb-3 text-center">
+                <h2 class="fs-1 fw-bold">Trusted by over 800+ companies</h2>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                    <img class="w-75 h-100" src="images/company/company-1.png" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="w-75 h-100" src="images/company/company-2.png" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="w-75 h-100" src="images/company/company-3.png" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="w-75 h-100" src="images/company/company-4.png" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="w-75 h-100" src="images/company/company-5.png" alt="">
+                </div>
+                <div class="col-2">
+                    <img class="w-75 h-100" src="images/company/company-6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Trusted Section ENd-->
         </main>
         <!-- Main Section End  -->
 
