--- a/index.html
+++ b/index.html
@@ -304,8 +304,22 @@
         <!-- Trusted Section ENd-->
         </main>
         <!-- Main Section End  -->
-
+        <!-- Footer Section Start -->
+        <footer class="bg-dark p-5">
+            <div class="text-center px-md-5 m-auto ">
+                <h2 class="text-white">Pro Tech</h2>
+                <p class="text-white px-md-5">Office 41, Zawaya Buildin, Ghala Muscat, 
+                    Sultanate of Oman</p>
+                    <a class="text-decoration-none text-white" href="#">Privacy Ploicy |</a><a class="text-decoration-none text-white" href="#"> Terms of use</a>
+            </div>
+        </footer>
+        <!-- Footer Section End -->
         <!-- bootstrap js file  -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
 </html>
+
+
+
+
+
