--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="carousel-caption d-none d-sm-block h-100 d-sm-flex align-items-center">
                             <div class="w-75 m-auto">
                                 <h2 class="fs-1 fw-semibold">Get Started Digital Learning</h2>
-                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                <p>Skills for your present and your future. Get started with us.</p>
                                 <button type="button" class="btn btn-primary fs-6 fw-semibold">Get Started</button>
                             </div>
                         </div>
@@ -67,7 +67,7 @@
                         <div class="carousel-caption d-none d-sm-block h-100 d-sm-flex align-items-center">
                             <div class="w-75 m-auto">
                                 <h2 class="fs-1 fw-semibold">Get Started Digital Learning</h2>
-                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                <p>With hard work and effort, you can achieve anything.</p>
                                 <button type="button" class="btn btn-primary fs-6 fw-semibold">Get Started</button>
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                         <div class="carousel-caption d-none d-sm-block h-100 d-sm-flex align-items-center">
                             <div class="w-75 m-auto">
                                 <h2 class="fs-1 fw-semibold">Get Started Digital Learning</h2>
-                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                                <p>Work and you’ll get what you need; work harder and you’ll get what you want.</p>
                                 <button type="button" class="btn btn-primary fs-6 fw-semibold">Get Started</button>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
         <section class="container mb-5">
             <div class="w-100 px-3 my-2 m-auto text-center">
                 <h2 class="fs-1 fw-bold">Discover Our Popular Courses</h2>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p>The more that you read, the more things you will know. if you stop reading, you will stop knowing somethings more.</p>
             </div>
             <div class="container overflow-hidden">
                 <div class="row mb-3 g-3">
@@ -189,7 +189,7 @@
         <section class="container bg-primary text-center text-lg-start d-lg-flex align-items-center mb-5 p-5">
             <div class="col-lg-8">
                 <h3 class="text-white">Ready to join </h3>
-                <p class="text-light">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class="text-light">are you ready to join with us. go for regitstration by click register button and join with us</p>
             </div>
             <div class="col-lg-4 text-lg-end">
                 <button type="button" class="btn bg-white text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
