--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Programming tech</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <!-- font awesome file  -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- My CSS file -->
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -14,14 +16,14 @@
             <!-- Navbar section Start  -->
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
-                  <div>
-                    <a class="navbar-brand fs-1 fw-semibold" href="#">Pro Tech</a>
+                  <div class="logo">
+                    <a class="navbar-brand fw-semibold" href="#">Pro Tech</a>
                   </div>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav m-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <ul class="navbar-nav m-auto my-2 my-lg-0 navbar-nav-scroll menu" style="--bs-scroll-height: 100px;">
                       <li class="nav-item px-3">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
@@ -43,7 +45,7 @@
                     </ul>
                   </div>
                   <form class="d-flex d-none d-lg-block ">
-                    <button class="btn btn-outline-success" type="submit">Register</button>
+                    <button class="btn fw-semibold header_register_btn" type="submit">Register</button>
                   </form>
                 </div>
               </nav>
@@ -54,19 +56,19 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-sm-block h-100 d-sm-flex align-items-center">
-                            <div class="w-75 m-auto">
-                                <h2 class="fs-1 fw-semibold">Get Started Digital Learning</h2>
+                        <div class="banner-heading carousel-caption  h-100 d-flex align-items-center">
+                            <div class="w-100 m-auto">
+                                <h1 class="fw-semibold">Get Started Digital Learning</h1>
                                 <p>Skills for your present and your future. Get started with us.</p>
-                                <button type="button" class="btn btn-primary fs-6 fw-semibold">Get Started</button>
+                                <button type="button" class="btn fs-6 fw-semibold">Get Started</button>
                             </div>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-sm-block h-100 d-sm-flex align-items-center">
-                            <div class="w-75 m-auto">
-                                <h2 class="fs-1 fw-semibold">Get Started Digital Learning</h2>
+                        <div class="banner-heading carousel-caption h-100 d-flex align-items-center">
+                            <div class="w-100 m-auto">
+                                <h1 class="fw-semibold">Get Started Digital Learning</h1>
                                 <p>With hard work and effort, you can achieve anything.</p>
                                 <button type="button" class="btn btn-primary fs-6 fw-semibold">Get Started</button>
                             </div>
@@ -74,9 +76,9 @@
                       </div>
                       <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-sm-block h-100 d-sm-flex align-items-center">
-                            <div class="w-75 m-auto">
-                                <h2 class="fs-1 fw-semibold">Get Started Digital Learning</h2>
+                        <div class="banner-heading carousel-caption  h-100 d-flex align-items-center">
+                            <div class="w-100 m-auto">
+                                <h1 class="fw-semibold">Get Started Digital Learning</h1>
                                 <p>Work and you’ll get what you need; work harder and you’ll get what you want.</p>
                                 <button type="button" class="btn btn-primary fs-6 fw-semibold">Get Started</button>
                             </div>
@@ -100,8 +102,8 @@
         <main>
                     <!-- Our Courses Section Start -->
         <section class="container mb-5">
-            <div class="w-100 px-3 my-2 m-auto text-center">
-                <h2 class="fs-1 fw-bold">Discover Our Popular Courses</h2>
+            <div class="section_heading w-100 px-3 my-2 m-auto text-center">
+                <h2>Discover Our Popular Courses</h2>
                 <p>The more that you read, the more things you will know. if you stop reading, you will stop knowing somethings more.</p>
             </div>
             <div class="container overflow-hidden">
@@ -124,7 +126,7 @@
                                 <img class="w-100 h-100" src="images/course/course-2.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
-                                <h5 class="">Javascript Basic to advanced</h5>
+                                <h5>Javascript Basic to advanced</h5>
                                 <p class="mb-1">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                 <a class="fw-semibold text-decoration-none" href="">Price : 20$</a>
                             </div>
@@ -136,7 +138,7 @@
                                 <img class="w-100 h-100" src="images/course/course-3.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
-                                <h5 class="">Fullstack Web Development</h5>
+                                <h5>Fullstack Web Development</h5>
                                 <p class="mb-1">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                 <a class="fw-semibold text-decoration-none" href="">Price : 20$</a>
                             </div>
@@ -148,7 +150,7 @@
                                 <img class="w-100 h-100" src="images/course/course-4.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
-                                <h5 class="">Digital Marketing</h5>
+                                <h5>Digital Marketing</h5>
                                 <p class="mb-1">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                 <a class="fw-semibold text-decoration-none" href="">Price : 20$</a>
                             </div>
@@ -160,7 +162,7 @@
                                 <img class="w-100 h-100" src="images/course/course-5.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
-                                <h5 class="">Photography Basic Rules</h5>
+                                <h5>Photography Basic Rules</h5>
                                 <p class="mb-1">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                 <a class="fw-semibold text-decoration-none" href="">Price : 20$</a>
                             </div>
@@ -172,7 +174,7 @@
                                 <img class="w-100 h-100" src="images/course/course-6.png" alt="">
                             </div>
                             <div class="corses_content pt-2 ps-2 pb-0">
-                                <h5 class="">Motion Graphics</h5>
+                                <h5>Motion Graphics</h5>
                                 <p class="mb-1">Some quick example text to build on the card title and make up the bulk of the card.</p>
                                 <a class="fw-semibold text-decoration-none" href="">Price : 20$</a>
                             </div>
@@ -180,15 +182,15 @@
                       </div>
                 </div>
                 <div class="text-center">
-                    <button type="button" class="btn btn-primary fs-6 fw-semibold">See More Courses</button>
+                    <button type="button" class="btn see_more_btn fs-6 fw-semibold">See More Courses</button>
                 </div>
             </div>
         </section>
         <!-- Our Courses End -->
         <!-- Ready To Join Section Start  -->
         <section class="container bg-primary text-center text-lg-start d-lg-flex align-items-center mb-5 p-5">
-            <div class="col-lg-8">
-                <h3 class="text-white">Ready to join </h3>
+            <div class="col-lg-8 section_heading">
+                <h2 class="text-white">Ready to join? </h2>
                 <p class="text-light">are you ready to join with us. go for regitstration by click register button and join with us</p>
             </div>
             <div class="col-lg-4 text-lg-end">
@@ -218,9 +220,9 @@
         </section>
         <!-- Ready To Join Section End -->
         <!-- Frequently Ask Question Section Start  -->
-        <section class="container mb-5">
+        <section class="container mb-5 section_heading">
             <div class="w-100 px-3 my-2 m-auto text-center">
-                <h2 class="fs-1 fw-bold">Frequently Asked Questions</h2>
+                <h2>Frequently Asked Questions</h2>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             </div>
             <div class="accordion accordion-flush w-75 m-auto" id="accordionFlushExample">
@@ -309,8 +311,22 @@
             <div class="text-center px-md-5 m-auto ">
                 <h2 class="text-white">Pro Tech</h2>
                 <p class="text-white px-md-5">Office 41, Zawaya Buildin, Ghala Muscat, 
-                    Sultanate of Oman</p>
-                    <a class="text-decoration-none text-white" href="#">Privacy Ploicy |</a><a class="text-decoration-none text-white" href="#"> Terms of use</a>
+                Sultanate of Oman</p>
+                <a class="text-decoration-none text-white" href="#">Privacy Ploicy |</a><a class="text-decoration-none text-white" href="#"> Terms of use</a>
+                <div class="social-icon">
+                  <a href="https://www.facebook.com/uniquelogo0/">
+                    <i class="icon fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="https://www.linkedin.com/in/muhammad-monir-uddin-807495201/">
+                    <i class="icon fa-brands fa-linkedin-in"></i>
+                  </a>
+                  <a href="https://twitter.com/Muhammad5296">
+                    <i class="icon fa-brands fa-twitter"></i>
+                  </a>
+                  <a href="https://www.instagram.com/farhan_ahmed_rayhan/">
+                    <i class="icon fa-brands fa-instagram"></i>
+                  </a>
+                </div>
             </div>
         </footer>
         <!-- Footer Section End -->
